page(obr): New "reveal" block css.  Manual only.

--- a/obr.htm
+++ b/obr.htm
@@ -317,7 +317,151 @@
 					target="_blank">Review income chart </a></div>
 		</div>
 	</section>
+
+	<!-- No cost expanded -->
+	<section class="ts-grid-reveal [--reveal-padding-y:3rem]">
+		<div class="px-8 overflow-hidden">
+			<p>
+				We’re glad you’re interested in the Electrify & Save On-Bill Repayment Program. However, you may
+				qualify
+				for
+				free energy efficiency and electrification services based on your income.
+			</p>
+			<p>
+				We recommend contacting your local Weatherization Assistance Program to see if you qualify. You can
+				easily
+				find your provider at
+				<a href="https://energyoffice.colorado.gov/weatherization-assistance-program"
+					class="underline text-blue-700">https://energyoffice.colorado.gov/weatherization-assistance-program</a>.
+			</p>
+			<p>
+				Below is a table to help you check if you qualify based on your household size.*
+			</p>
+			<!-- Mobile Table -->
+			<table class="border border-gray-500 w-full max-w-sm min-w-0 mx-auto lg:hideme">
+				<thead>
+					<tr class="bg-gray">
+						<th class="border border-gray-500 px-4 py-2 text-center">Household Size</th>
+						<th class="border border-gray-500 px-4 py-2 text-center">Income Threshold</th>
+					</tr>
+				</thead>
+				<tbody class="bg-white">
+					<tr>
+						<td class="border px-4 py-2">1 Person</td>
+						<td class="border px-4 py-2">$57,120</td>
+					</tr>
+					<tr>
+						<td class="border px-4 py-2">2 Persons</td>
+						<td class="border px-4 py-2">$65,280</td>
+					</tr>
+					<tr>
+						<td class="border px-4 py-2">3 Persons</td>
+						<td class="border px-4 py-2">$73,440</td>
+					</tr>
+					<tr>
+						<td class="border px-4 py-2">4 Persons</td>
+						<td class="border px-4 py-2">$81,600</td>
+					</tr>
+					<tr>
+						<td class="border px-4 py-2">5 Persons</td>
+						<td class="border px-4 py-2">$90,551</td>
+					</tr>
+					<tr>
+						<td class="border px-4 py-2">6 Persons</td>
+						<td class="border px-4 py-2">$103,041</td>
+					</tr>
+					<tr>
+						<td class="border px-4 py-2">7 Persons</td>
+						<td class="border px-4 py-2">$105,383</td>
+					</tr>
+					<tr>
+						<td class="border px-4 py-2">8 Persons</td>
+						<td class="border px-4 py-2">$108,300</td>
+					</tr>
+				</tbody>
+			</table>
+
+			<!-- Desktop Table -->
+			<table class="hideme lg:table table-auto border border-gray-500 w-full text-center">
+				<thead>
+					<tr class="bg-white">
+						<th class="border border-gray-500 py-2 text-right">Household Size</th>
+						<th class="border border-gray-500 py-2 text-center">1</th>
+						<th class="border border-gray-500 py-2 text-center">2</th>
+						<th class="border border-gray-500 py-2 text-center">3</th>
+						<th class="border border-gray-500 py-2 text-center">4</th>
+						<th class="border border-gray-500 py-2 text-center">5</th>
+						<th class="border border-gray-500 py-2 text-center">6</th>
+						<th class="border border-gray-500 py-2 text-center">7</th>
+						<th class="border border-gray-500 py-2 text-center">8</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<th class="border border-gray-500 py-2 text-right bg-white">Income Threshold</th>
+						<td class="border py-2 text-center bg-white">$57,120</td>
+						<td class="border py-2 text-center bg-white">$65,280</td>
+						<td class="border py-2 text-center bg-white">$73,440</td>
+						<td class="border py-2 text-center bg-white">$81,600</td>
+						<td class="border py-2 text-center bg-white">$90,551</td>
+						<td class="border py-2 text-center bg-white">$103,041</td>
+						<td class="border py-2 text-center bg-white">$105,383</td>
+						<td class="border py-2 text-center bg-white">$108,300</td>
+					</tr>
+				</tbody>
+			</table>
+
+
+
+
+
+			<p>
+				Keep in mind that income thresholds are higher in some areas. If you live in a higher-income
+				area—like
+				Gunnison
+				County or San Miguel County—please contact Housing Resources of Western Colorado at <span
+					class="whitespace-nowrap">(970) 241-2871</span>. For El Paso County, contact the Energy Resource
+				Center at <span class="whitespace-nowrap">(719) 591-0772</span>. These are just a few examples, so
+				check
+				with your local program
+				if you think you may qualify.
+			</p>
+			<p class="italic pb-8">
+				*Household members are people who live with you for whom you have financial responsibilities, not
+				roommates.
+			</p>
 		</div>
+
+	</section>
+
+
+
+	<!-- Partners -->
+	<section class="px-8 py-16 text-center sm:grid sm:place-content-center sm:p-16 sm:px-8">
+		<div class="max-w-2xl space-y-4">
+			<h2 class="ts-heading-2 font-serif text-2xl font-light text-wrap-balance">
+				Our Partners
+			</h2>
+			<p class="text-balance">
+				Together we are committed to giving Coloradans access to energy efficient technologies and upgrades.
+				Together, we’ll Electrify and Save&reg;.
+			</p>
+			<p class="grid grid-cols-3 gap-4 pt-4">
+				<span class="grid place-content-center">
+					<img src="https://tristate.coop/sites/default/files/Tri-State-Logo-Blue_lr2.png"
+						alt="Tri-State Logo" class="max-h-16">
+				</span>
+				<span class="grid place-content-center">
+					<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/2025/ccef-abbr-horizontal-logo-fullcolor-no-tag-web.png"
+						alt="CCEF Logo">
+				</span>
+				<span class="grid place-content-center">
+					<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/2025/zero-homes-logo.png"
+						alt="Zero Homes Logo" class="max-h-14">
+				</span>
+			</p>
+		</div>
+		<div></div>
 	</section>
 
 
@@ -378,33 +522,6 @@
 		</div>
 	</section>
 
-	<!-- Partners -->
-	<section class="px-8 py-16 text-center sm:grid sm:place-content-center sm:p-16 sm:px-8">
-		<div class="max-w-2xl space-y-4">
-			<h2 class="ts-heading-2 font-serif text-2xl font-light text-wrap-balance">
-				Our Partners
-			</h2>
-			<p class="text-balance">
-				Together we are committed to giving Coloradans access to energy efficient technologies and upgrades.
-				Together, we’ll Electrify and Save&reg;.
-			</p>
-			<p class="grid grid-cols-3 gap-4 pt-4">
-				<span class="grid place-content-center">
-					<img src="https://tristate.coop/sites/default/files/Tri-State-Logo-Blue_lr2.png"
-						alt="Tri-State Logo" class="max-h-16">
-				</span>
-				<span class="grid place-content-center">
-					<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/2025/ccef-abbr-horizontal-logo-fullcolor-no-tag-web.png"
-						alt="CCEF Logo">
-				</span>
-				<span class="grid place-content-center">
-					<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/2025/zero-homes-logo.png"
-						alt="Zero Homes Logo" class="max-h-14">
-				</span>
-			</p>
-		</div>
-		<div></div>
-	</section>
 
 	<!-- FAQ -->
 	<section class="px-8 pt-8 text-center">
@@ -476,125 +593,8 @@
 		</div>
 	</section>
 
-	<!-- AMI - Section tag is just for organziation, not used on site. -->
-	<section>
 
 
-		<h2 class="font-serif text-2xl font-light text-center pt-10 pb-4 mb-0" style="background-color: #F5F5F5;">
-			Your upgrades could be free
-		</h2>
-		<p>
-			We’re glad you’re interested in the Electrify & Save On-Bill Repayment Program. However, you may
-			qualify
-			for
-			free energy efficiency and electrification services based on your income.
-		</p>
-		<p>
-			We recommend contacting your local Weatherization Assistance Program to see if you qualify. You can
-			easily
-			find your provider at
-			<a href="https://energyoffice.colorado.gov/weatherization-assistance-program"
-				class="underline text-blue-700">https://energyoffice.colorado.gov/weatherization-assistance-program</a>.
-		</p>
-		<p>
-			Below is a table to help you check if you qualify based on your household size.*
-		</p>
-		<!-- Mobile Table -->
-		<table class="border border-gray-500 w-full max-w-sm min-w-0 mx-auto lg:hideme">
-			<thead>
-				<tr class="bg-gray">
-					<th class="border border-gray-500 px-4 py-2 text-center">Household Size</th>
-					<th class="border border-gray-500 px-4 py-2 text-center">Income Threshold</th>
-				</tr>
-			</thead>
-			<tbody class="bg-white">
-				<tr>
-					<td class="border px-4 py-2">1 Person</td>
-					<td class="border px-4 py-2">$57,120</td>
-				</tr>
-				<tr>
-					<td class="border px-4 py-2">2 Persons</td>
-					<td class="border px-4 py-2">$65,280</td>
-				</tr>
-				<tr>
-					<td class="border px-4 py-2">3 Persons</td>
-					<td class="border px-4 py-2">$73,440</td>
-				</tr>
-				<tr>
-					<td class="border px-4 py-2">4 Persons</td>
-					<td class="border px-4 py-2">$81,600</td>
-				</tr>
-				<tr>
-					<td class="border px-4 py-2">5 Persons</td>
-					<td class="border px-4 py-2">$90,551</td>
-				</tr>
-				<tr>
-					<td class="border px-4 py-2">6 Persons</td>
-					<td class="border px-4 py-2">$103,041</td>
-				</tr>
-				<tr>
-					<td class="border px-4 py-2">7 Persons</td>
-					<td class="border px-4 py-2">$105,383</td>
-				</tr>
-				<tr>
-					<td class="border px-4 py-2">8 Persons</td>
-					<td class="border px-4 py-2">$108,300</td>
-				</tr>
-			</tbody>
-		</table>
-
-		<!-- Desktop Table -->
-		<table class="hideme lg:table table-auto border border-gray-500 w-full text-center">
-			<thead>
-				<tr class="bg-white">
-					<th class="border border-gray-500 py-2 text-right">Household Size</th>
-					<th class="border border-gray-500 py-2 text-center">1</th>
-					<th class="border border-gray-500 py-2 text-center">2</th>
-					<th class="border border-gray-500 py-2 text-center">3</th>
-					<th class="border border-gray-500 py-2 text-center">4</th>
-					<th class="border border-gray-500 py-2 text-center">5</th>
-					<th class="border border-gray-500 py-2 text-center">6</th>
-					<th class="border border-gray-500 py-2 text-center">7</th>
-					<th class="border border-gray-500 py-2 text-center">8</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<th class="border border-gray-500 py-2 text-right bg-white">Income Threshold</th>
-					<td class="border py-2 text-center bg-white">$57,120</td>
-					<td class="border py-2 text-center bg-white">$65,280</td>
-					<td class="border py-2 text-center bg-white">$73,440</td>
-					<td class="border py-2 text-center bg-white">$81,600</td>
-					<td class="border py-2 text-center bg-white">$90,551</td>
-					<td class="border py-2 text-center bg-white">$103,041</td>
-					<td class="border py-2 text-center bg-white">$105,383</td>
-					<td class="border py-2 text-center bg-white">$108,300</td>
-				</tr>
-			</tbody>
-		</table>
-
-
-
-
-
-		<p>
-			Keep in mind that income thresholds are higher in some areas. If you live in a higher-income
-			area—like
-			Gunnison
-			County or San Miguel County—please contact Housing Resources of Western Colorado at <span
-				class="whitespace-nowrap">(970) 241-2871</span>. For El Paso County, contact the Energy Resource
-			Center at <span class="whitespace-nowrap">(719) 591-0772</span>. These are just a few examples, so
-			check
-			with your local program
-			if you think you may qualify.
-		</p>
-
-		<p class="italic pb-8">
-			*Household members are people who live with you for whom you have financial responsibilities, not
-			roommates.
-		</p>
-
-	</section>
 
 
 
@@ -603,6 +603,8 @@
 			class="block items-center gap-2 rounded-full border px-4 py-2 font-normal no-underline transition-transform text-black text-center md:inline-flex">Apply
 			Now</a></div> -->
 </body>
+
+
 <script>	// Dynamically add options to the existing select element
 	const obrFormOptions = [
 		{ label: 'Gunnison County', url: 'https://forms.zohopublic.com/dave77/form/CCEFOnBillElectrifyandSaveInterestFormGunnisonCoun/formperma/eaL0vRpEvSxnZ0SfUkbvcwk455RufgurFBcYNNdmFrI?zf_rszfm=1' },
