--- a/obr.htm
+++ b/obr.htm
@@ -20,6 +20,10 @@
 	<link rel="stylesheet"
 		href="https://tristate.coop/sites/default/files/css/css_Rli8DIVnIKbjfXhlxva1M3yFKBDc26-qMFDXgVLNaEY.css" />
 
+
+	<link href="//cdn.jsdelivr.net/npm/featherlight@1.7.14/release/featherlight.min.css" type="text/css"
+		rel="stylesheet" />
+
 	<link rel="stylesheet"
 		href="https://tristate.coop/sites/default/files/css/css_-UFRzSpfx2tStwj5bYydlkhBR3LXL-MLhjJ2dqKU_nw.css" />
 	<link rel="stylesheet"
@@ -91,7 +95,7 @@
 						your
 						monthly utility bill.</strong></div>
 				<div><button
-						class="flex gap-2 mx-auto bg-green rounded-full px-4 py-2 leading-none font-normal no-underline transition-transform text-white text-center cursor-pointer sm:ml-0"
+						class="flex gap-2 mx-auto bg-green rounded-full px-4 py-2 leading-none font-normal no-underline text-white text-center cursor-pointer sm:ml-0"
 						data-scrollto="form-intro">
 						Apply today
 						<img src="https://tristate.coop/sites/default/files/images/icons/button-arrow-right-regular-white.svg"
@@ -171,9 +175,9 @@
 				from the provided list. After
 				submission, you'll receive communications primarily from the Collective Clean Energy Fund and Zero Homes
 				about the
-				personalized financing opportunities available to you. <strong class="hideme cursor-pointer"
-					data-eligible>Am I
-					eligible?</strong></p>
+				personalized financing opportunities available to you. <button
+					class="cursor-pointer bg-transparent underline" data-featherlight="#eligibility">Am I
+					eligible?</button></p>
 
 			<div class="flex flex-wrap justify-center gap-2" data-member-buttons>
 				<template>
@@ -184,6 +188,23 @@
 			</div>
 		</div>
 	</section>
+	<!-- Modal -->
+	<div class="hideme">
+		<section class="relative bg-green p-8 mx-4 mt-2 rounded-xl overflow-hidden sm:max-w-4xl sm:pb-12"
+			id="eligibility">
+			<div
+				class="absolute z-0 bg-connections-l h-96 w-full bg-no-repeat origin-top-left top-full left-0 opacity-45 -rotate-90">
+			</div>
+			<div class="relative z-10 sm:grid sm:grid-cols-4 sm:gap-4">
+				<p class="font-serif text-xl">Am I <strong>eligible</strong> for the program?</p>
+				<p>Be the owner of a property in a participating Co-Op service territory with a valid account</p>
+				<p>Have 12 consecutive months of payments without a shut off notice</p>
+				<p>Have no late penalties for the previous 6 consecutive months, unless member agrees to enroll in
+					autopay
+				</p>
+			</div>
+		</section>
+	</div>
 
 	<!-- Peek -->
 	<section class="grid overflow-hidden" style="background-color: #F5F5F5;" data-peek>
@@ -238,28 +259,7 @@
 		</div>
 	</section>
 
-	<!-- Modal -->
-	<section
-		class="fixed z-50 top-1/4 left-full w-11/12 bg-green p-8 pr-12 ml-4 rounded-l-xl transition-none sm:w-auto sm:top-full sm:left-4 sm:pr-8 sm:pb-12 sm:mt-4 sm:mx-auto sm:max-w-4xl sm:right-4 sm:rounded-b-none sm:rounded-t-xl "
-		data-eligible-modal>
-		<div
-			class="absolute z-0 bg-connections-l h-96 w-24 bg-no-repeat origin-top-left top-full left-0 opacity-45 -rotate-90">
-		</div>
-		<!-- close button -->
-		<button type="button" aria-label="Close"
-			class="absolute size-8 -top-2 -left-2 text-navy bg-white rounded-full p-2 leading-none shadow hover:bg-gray-200 focus:outline-none">
-			<span aria-hidden="true">&times;</span>
-		</button>
-		<div class="relative z-10 sm:grid sm:grid-cols-4 sm:gap-4">
-			<p class="font-serif text-xl text-navy">Am I <strong>eligible</strong> for the program?</p>
-			<p>Be the owner of a property in a participating Co-Op service territory with a valid account</p>
-			<p>Have 12 consecutive months of payments without a shut off notice</p>
-			<p>Have no late penalties for the previous 6 consecutive months, unless member agrees to enroll in autopay
-			</p>
-		</div>
 
-		</div>
-	</section>
 	<!-- Form container -->
 	<!-- <section style="background-color: #F5F5F5;">
 		<div data-zoho-container></div>
@@ -608,6 +608,9 @@
 			Now</a></div> -->
 </body>
 
+<script src="//code.jquery.com/jquery-latest.js"></script>
+<script src="//cdn.jsdelivr.net/npm/featherlight@1.7.14/release/featherlight.min.js" type="text/javascript"
+	charset="utf-8"></script>
 
 <script>	// Dynamically add options to the existing select element
 	const obrFormOptions = [
