page(obr): v4 changes
Badge color, new image, APPLY button bigger.

--- a/obr.htm
+++ b/obr.htm
@@ -73,7 +73,8 @@
 
 			<!-- Text Block 1 -->
 			<div class="mb-4 md:col-start-1 md:row-start-1">
-				<div class="font-xs font-semibold text-navy uppercase">Easy financing for home & business owners</div>
+				<div class="font-xs font-semibold uppercase" style="color: #7d8d2f;">Easy financing for home & business
+					owners</div>
 				<div class="text-gray-dark font-serif text-4xl">Save Today on <span
 						class="inline-block">High-Efficiency</span> Energy Upgrades</div>
 			</div>
@@ -95,7 +96,7 @@
 						your
 						monthly utility bill.</strong></div>
 				<div><button
-						class="flex gap-2 mx-auto bg-green rounded-full px-4 py-2 leading-none font-normal no-underline text-white text-center cursor-pointer sm:ml-0"
+						class="flex gap-2 mx-auto bg-green rounded-full px-6 py-3 leading-none font-normal uppercase no-underline text-white text-center cursor-pointer sm:ml-0"
 						data-scrollto="form-intro">
 						Apply today
 						<img src="https://tristate.coop/sites/default/files/images/icons/button-arrow-right-regular-white.svg"
@@ -152,7 +153,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="swiper-pagination h-6 md:hidden"></div>
+			<div class="swiper-pagination -mb-2 h-6 md:hidden"></div>
 		</div>
 		<style>
 			:root {
@@ -167,7 +168,7 @@
 		id="form-intro">
 		<div class="max-w-xl space-y-4">
 			<div class="mb-4 md:col-start-1 md:row-start-1">
-				<div class="font-xs font-semibold text-navy uppercase">How to apply</div>
+				<div class="font-xs font-semibold uppercase" style="color: #7d8d2f;">How to apply</div>
 				<p class="text-gray-dark font-serif text-4xl">See what energy upgrades are available to you, today.
 				</p>
 			</div>
@@ -244,7 +245,7 @@
 			<div class="w-1/2 py-8 pr-8 flex flex-col justify-center items-end text-center space-y-6 md:w-3/5">
 				<!-- Blue badge -->
 				<div class=" flex-shrink-0">
-					<img src="assets/images/obr-badge-full.svg" alt="" class="size-52 mr-12" data-cta-badge />
+					<img src="assets/images/obr-badge-full-white.svg" alt="" class="size-52 mr-12" data-cta-badge />
 				</div>
 
 				<!-- Phone CTA -->
@@ -300,7 +301,7 @@
 						alt="arrow right" class="h-4"></button>
 
 				<button
-					class="flex justify-between items-center gap-2 bg-transparent border border-solid border-green rounded-full px-4 py-2 leading-none font-normal no-underline transition-transform text-black text-center md:inline-flex"
+					class="flex justify-between items-center gap-2 cursor-pointer bg-transparent border border-solid border-green rounded-full px-4 py-2 leading-none font-normal no-underline transition-transform text-black text-center md:inline-flex"
 					data-scrollto="faq">Learn More <img
 						src="https://tristate.coop/sites/default/files/images/icons/button-arrow-right-regular-green.svg"
 						alt="arrow right" class="h-4"></button>
@@ -313,7 +314,7 @@
 	<section class="min-h-96 sm:grid sm:grid-cols-5">
 
 		<div class="relative aspect-video sm:aspect-auto sm:h-full sm:col-span-2 sm:order-last">
-			<img src="assets/images/fpo-solar-in-field-700x500.jpg" alt="FPO"
+			<img src="assets/images/gettyimages-1407175869-heatpump-700x500.jpeg" alt="FPO"
 				class="absolute inset-0 w-full h-full object-cover" />
 		</div>
 
