page(obr): v5 changes - set 1

--- a/obr.htm
+++ b/obr.htm
@@ -42,20 +42,20 @@
 <body id="main" class="block-region-content"> <!-- Hero -->
 	<section class="relative bg-green">
 
-		<div
-			class="relative flex flex-col items-center gap-4 px-8 py-6 text-center sm:flex-row sm:justify-between lg:grid lg:grid-cols-8 lg:p-0">
-			<div class="hideme bg-connections-h bg-repeat-x bg-bottom h-full lg:block lg:col-span-2"></div>
-			<div class="relative z-10 flex justify-center lg:col-span-4 lg:py-6">
-				<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/2025/E%26S_OBR_Horiz_White.png"
-					alt="Electrify and Save On-Bill Repayment" class="sm:max-w-sm lg:max-w-sm">
-			</div>
+		<div class="flex items-stretch text-center">
+			<div class="bg-connections-l bg-repeat-y bg-cover w-24"></div>
+			<div class="flex-grow flex flex-col lg:flex-row justify-between items-center gap-4 py-6 px-8">
+				<div class="relative z-10 flex justify-center">
+					<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/2025/E%26S_OBR_Horiz_White.png"
+						alt="Electrify and Save On-Bill Repayment" class="sm:max-w-sm lg:max-w-sm">
+				</div>
 
-			<div class="relative z-10 space-y-2 lg:col-span-2 lg:py-6">
-				<div class="leading-none lg:text-xs font-semibold">HAVE A QUESTION? CALL US:</div>
-				<div class="leading-none font-serif font-semibold text-xl">720-263-2313</div>
+				<div class="relative z-10 space-y-2">
+					<div class="leading-none lg:text-xs font-semibold">HAVE A QUESTION? CALL US:</div>
+					<div class="leading-none font-serif font-semibold text-xl">720-263-2313</div>
+				</div>
 			</div>
-			<div
-				class="absolute z-0 bottom-0 left-0 bg-connections-h bg-repeat-x bg-bottom h-24 w-full sm:left-auto sm:w-2/5 sm:right-0 lg:w-1/4">
+			<div class="bg-connections-r bg-repeat-y bg-cover w-24 bg-right">
 			</div>
 		</div>
 	</section>
@@ -75,7 +75,7 @@
 			<div class="mb-4 md:col-start-1 md:row-start-1">
 				<div class="font-xs font-semibold uppercase" style="color: #7d8d2f;">Easy financing for home & business
 					owners</div>
-				<div class="text-gray-dark font-serif text-4xl">Save Today on <span
+				<div class="text-gray-dark font-serif text-4xl mt-2">Save Today on <span
 						class="inline-block">High-Efficiency</span> Energy Upgrades</div>
 			</div>
 
@@ -96,11 +96,11 @@
 						your
 						monthly utility bill.</strong></div>
 				<div><button
-						class="flex gap-2 mx-auto bg-green rounded-full px-6 py-3 leading-none font-normal uppercase no-underline text-white text-center cursor-pointer sm:ml-0"
+						class="flex items-center gap-2 mx-auto bg-green rounded-full px-12 py-4 no-underline text-white text-center cursor-pointer sm:ml-0"
 						data-scrollto="form-intro">
-						Apply today
+						<span class="text-xl leading-none font-normal uppercase">Apply today</span>
 						<img src="https://tristate.coop/sites/default/files/images/icons/button-arrow-right-regular-white.svg"
-							alt="arrow right" class="h-4 -mb-1 ">
+							alt="arrow right" class="h-5 -mb-1">
 					</button>
 				</div>
 			</div>
