page(obr): vertical matrix on peek

--- a/obr.htm
+++ b/obr.htm
@@ -234,8 +234,8 @@
 			</div>
 			<div class="hideme absolute h-full w-full bottom-0 bg-green opacity-90 md:block"
 				style="clip-path: polygon(100% 0%, 100% 0%, 100% 100%, 0% 100%);" data-triangle>
-				<div
-					class="bg-connections-l h-96 w-full bg-no-repeat absolute bottom-0 left-full origin-bottom-left -rotate-90 opacity-45">
+				<div class="absolute top-0 right-0 bg-connections-r bg-right w-32 h-full bg-repeat-y opacity-45"
+					style="background-size: 100%; auto;">
 				</div>
 			</div>
 		</div>
