page(obr): finally fixed the animation

--- a/obr.htm
+++ b/obr.htm
@@ -256,7 +256,10 @@
 			</div>
 		</div>
 		<div class="col-start-1 row-start-1 relative">
-			<div class="absolute w-full top-full" style="background-color: #F5F5F5;" data-zoho-container></div>
+			<div class="absolute w-full top-full" style="background-color: #F5F5F5;" data-zoho-container>
+
+			</div>
+
 		</div>
 	</section>
 
