page(energy mix): spp rto cta v1

--- a/our-energy-mix.htm
+++ b/our-energy-mix.htm
@@ -15,7 +15,7 @@
 
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-	<link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300;@400;700&display=swap" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300;400;700&display=swap" rel="stylesheet" />
 
 	<!-- Global Styles -->
 	<link rel="stylesheet"
@@ -60,31 +60,53 @@
 				<!-- Builing -->
 				<section class="px-8 py-16 text-center text-balance sm:grid sm:place-content-center sm:min-h-[400px]">
 					<div class="mx-auto max-w-2xl space-y-4">
-						<h2 class="font-serif font-light text-3xl">
-							Building for the future
-						</h2>
+						<h2 class="font-serif font-light text-3xl">Building for the future</h2>
+
+						<p>We’re evolving our energy mix now to support our members’ needs into the future.</p>
+
+						<p>When we design our energy mix — including solar, wind, natural gas, batteries and hydro — we
+							can supply power for
+							future generations. Whether strengthening for storm resilience or meeting the growing energy
+							demand, we’re
+							safeguarding reliability for the rural West. The generation we’re building for will be as
+							clean and affordable
+							as possible.</p>
+
+						<p><a class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-gray"
+								href="/erp">Learn how we plan </a></p>
+
+
+
+						<h2 class="font-serif font-light text-3xl pt-10">Pooling Our Resources</h2>
+						<p>By <a href="/benefits-spp-rto-west-participation-highlighted-filing-copuc">expanding
+								participation in the
+								Southwest Power Pool (SPP) Regional Transmission Organization (RTO)</a>, Tri-State is
+							helping deliver more
+							reliable and affordable electricity to its members. With support from Colorado regulators,
+							this move is expected
+							to save millions each year while making the power grid more efficient and better connected
+							across the
+							West.</p>
+						<h2 class="font-serif font-light text-3xl pt-10">Voice your support for Tri-State to join the
+							SPP RTO which ensures
+							reliable, affordable power </h2>
+						<p>We all know how reliable power is critical to our rural way of life. Following years of
+							collaboration with other
+							regional utilities, transmission providers and stakeholders, Tri-State has filed an
+							Organized Wholesale Market
+							Application with the Colorado Public Utilities Commission (CoPUC) and plans to expand its
+							participation in the
+							Southwest Power Pool Regional Transmission Organization (SPP RTO) in the West.</p>
 						<p>
-							We’re evolving our energy mix now to support our members’ needs into the future.
-						</p>
-						<p>
-							When we design our energy mix &mdash; including solar, wind, natural gas, batteries and
-							hydro
-							&mdash; we can
-							supply power
-							for future generations. Whether strengthening for storm resilience or meeting the growing
-							energy
-							demand,
-							we’re safeguarding reliability for the rural West. The generation we’re building for will be
-							as
-							clean and
-							affordable as possible.
-						</p>
-						<p>
-							<a href="/erp"
-								class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-gray">
-								Learn how we plan
-							</a>
-						</p>
+							You can easily share your support through the Colorado Public Utilities Commission. </p>
+						<p class="flex gap-4 justify-center"><a
+								class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-gray"
+								href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/Call%20to%20Action%20on%20Tri-State%20SPP%20RTO.pdf"
+								target="_blank">Instructions
+							</a><a
+								class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-gray"
+								href="https://www.dora.state.co.us/pls/efi/EFI_COMMENT_GUI.Electric"
+								target="_blank">File Comment Here</a></p>
 					</div>
 				</section>
 
