page(obr): v6 changes

--- a/obr.htm
+++ b/obr.htm
@@ -43,7 +43,7 @@
 	<section class="relative bg-green">
 
 		<div class="flex items-stretch text-center">
-			<div class="bg-connections-l bg-repeat-y bg-cover w-24"></div>
+			<div class="bg-connections-l bg-repeat-y bg-cover opacity-45 w-24"></div>
 			<div class="flex-grow flex flex-col lg:flex-row justify-between items-center gap-4 py-6 px-8">
 				<div class="relative z-10 flex justify-center">
 					<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/2025/E%26S_OBR_Horiz_White.png"
@@ -55,7 +55,7 @@
 					<div class="leading-none font-serif font-semibold text-xl">720-263-2313</div>
 				</div>
 			</div>
-			<div class="bg-connections-r bg-repeat-y bg-cover w-24 bg-right">
+			<div class="bg-connections-r bg-repeat-y bg-cover opacity-45 w-24 bg-right">
 			</div>
 		</div>
 	</section>
@@ -172,7 +172,7 @@
 				<p class="text-gray-dark font-serif text-4xl">See what energy upgrades are available to you, today.
 				</p>
 			</div>
-			<p class="mb-4">If you are eligible, complete our interest form by selecting your co-op service territory
+			<p class="mb-4">Complete our interest form by selecting your co-op service territory
 				from the provided list. After
 				submission, you'll receive communications primarily from the Collective Clean Energy Fund and Zero Homes
 				about the
@@ -193,9 +193,6 @@
 	<div class="hideme">
 		<section class="relative bg-green p-8 mx-4 mt-2 rounded-xl overflow-hidden sm:max-w-4xl sm:pb-12"
 			id="eligibility">
-			<div
-				class="absolute z-0 bg-connections-l h-96 w-full bg-no-repeat origin-top-left top-full left-0 opacity-45 -rotate-90">
-			</div>
 			<div class="relative z-10 sm:grid sm:grid-cols-4 sm:gap-4">
 				<p class="font-serif text-xl">Am I <strong>eligible</strong> for the program?</p>
 				<p>Be the owner of a property in a participating Co-Op service territory with a valid account</p>
